--- a/main/templates/main/services.html
+++ b/main/templates/main/services.html
@@ -109,7 +109,7 @@ body {
     <div class="team-member">
       <img src="{% static 'main/img/hassane.jpeg' %}" alt="Hassane">
       <h3>Hassane AMADOU</h3>
-      <p>Fondateur & ARCHITECTE</p>
+      <p>Fondateur & ARCHITECTE DESIGNE</p>
       <div class="social-icons">
         <a href="#"><i class="bx bxl-linkedin"></i></a>
         <a href="#"><i class="bx bxl-github"></i></a>
@@ -129,7 +129,7 @@ body {
     <div class="team-member">
       <img src="{% static 'main/img/fadil.jpeg' %}" alt="Fadil">
       <h3>Fadil EKPAYE</h3>
-      <p>Responsable pédagogique</p>
+      <p> Ingénieur en Énergies Renouvelables et développeur Web junior (Responsable pédagogique)</p>
       <div class="social-icons">
         <a href="#"><i class="bx bxl-twitter"></i></a>
       </div>
@@ -138,7 +138,7 @@ body {
     <div class="team-member">
       <img src="{% static 'main/img/Jauram.jpg' %}" alt="Jauram">
       <h3>AXEL Chris Jauram</h3>
-      <p>Ingénieur génie civil & Prof en Robot</p>
+      <p>Ingénieur génie civil (Prof en Robot)</p>
       <div class="social-icons">
         <a href="#"><i class="bx bxl-twitter"></i></a>
       </div>
@@ -157,7 +157,16 @@ body {
     <div class="team-member">
       <img src="{% static 'main/img/yass.jpeg' %}" alt="Yasser">
       <h3>DAMTARE Yasser</h3>
-      <p>Prof en AutoCad, Covadis, Qgis, Arcgis</p>
+      <p>Topographe (Prof en AutoCad, Covadis, Qgis, Arcgis)</p>
+      <div class="social-icons">
+        <a href="#"><i class="bx bxl-twitter"></i></a>
+      </div>
+    </div>
+
+        <div class="team-member">
+      <img src="{% static 'main/img/josué.jpg' %}" alt="josué">
+      <h3>BENISSAN Alexandre Josué</h3>
+      <p>Réalisateur vidéo, Photographe (Social Média Manager)</p>
       <div class="social-icons">
         <a href="#"><i class="bx bxl-twitter"></i></a>
       </div>
@@ -166,7 +175,7 @@ body {
     <div class="team-member">
       <img src="{% static 'main/img/Arsène.jpg' %}" alt="Arsène">
       <h3>Marouf God's Will OBING</h3>
-      <p>Prof en CypeCad</p>
+      <p>Ingénieur Génie Civil (Prof en CypeCad)</p>
       <div class="social-icons">
         <a href="#"><i class="bx bxl-twitter"></i></a>
       </div>
@@ -193,7 +202,7 @@ body {
     <div class="team-member">
       <img src="{% static 'main/img/Rodrigue.jpg' %}" alt="Rodrigue">
       <h3>MFOULU Rodrigue</h3>
-      <p>Architècte & Prof en 3DS Max</p>
+      <p>Architècte (Prof en 3DS Max)</p>
       <div class="social-icons">
         <a href="#"><i class="bx bxl-twitter"></i></a>
       </div>
